# research-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  config.yaml  interests.md  pyproject.toml
.cursor/rules/: basic.mdc
.github/: SETUP.md
.github/workflows/: daily-monitor.yml
artifacts/arxiv_rss/: AHAMask-Reliable-Task-Specification-for-Large-Audi_01758198.yaml  Adapting-Neural-Audio-Codecs-to-EEG_36bb7aae.yaml  AgriGPT-Omni-A-Unified-Speech-Vision-Text-Framewor_83689571.yaml  Animating-Language-Practice-Engagement-with-Styliz_42496de6.yaml  Arabic-TTS-with-FastPitch-Reproducible-Baselines-A_bd45e205.yaml  Asking-LLMs-to-Verify-First-is-Almost-Free-Lunch_47b1ad48.yaml  BRACE-A-Benchmark-for-Robust-Audio-Caption-Quality_9ca50d4d.yaml  Balancing-Speech-Understanding-and-Generation-Usin_53900c37.yaml  Beyond-Unified-Models-A-Service-Oriented-Approach-_2b8a2eb8.yaml  Bridging-Speech-Emotion-Recognition-and-Personalit_ffb3cbed.yaml  CompanionCast-A-Multi-Agent-Conversational-AI-Fram_b2f67bf2.yaml  Comparative-Evaluation-of-Expressive-Japanese-Char_03d9e3bb.yaml  Comparing-Unsupervised-and-Supervised-Semantic-Spe_c05c8401.yaml  DFALLM-Achieving-Generalizable-Multitask-Deepfake-_b78b1614.yaml  DMP-TTS-Disentangled-multi-modal-Prompting-for-Con_d7ad8f80.yaml  Decoding-inner-speech-with-an-end-to-end-brain-to-_f938d653.yaml  Discrete-Optimal-Transport-and-Voice-Conversion_bbe4279d.yaml  (+50 more)
tests/: test_arxiv_rss_source.py  test_claude_client.py  test_entities.py  test_filters.py  test_json_parsing.py  test_seen_tracker.py  test_slack_notifier.py  test_use_cases.py
(+163 files in other folders)
