[project]
name = "research-monitor"
version = "0.1.0"
description = "Automation tools for monitoring speech-synthesis updates."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[project.scripts]
research-monitor = "research_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_monitor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

